# paper-rank-proxy

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
app/: __init__.py  auth.py  config.py  database.py  easyscholar_client.py  main.py  models.py  normalize.py  rank_service.py  rate_limit.py  schemas.py
scripts/: init_db.py
tests/: conftest.py  test_api_contract.py  test_normalize.py  test_rank_cache.py
